# scrabble-game

./: CMakeLists.txt  assign2
scrabble/: assign2  menu.cpp  savedgame.txt  savedgame_01_06_2022.txt
scrabble/contract/: Serialisable.cpp  Serialisable.h
scrabble/core/: Player.cpp  Player.h  Scrabble.cpp  Scrabble.h  Tile.cpp  Tile.h
scrabble/core/gameboard/: Board.cpp  Board.h  BoardGridTraverser.cpp  BoardGridTraverser.h
scrabble/utility/: LinkedList.h  Node.h  SimpleQueue.h  typedefs.h  utils.cpp  utils.h
tests/: gameplay.input  gameplay.output  no_word_validation.input  no_word_validation.output  no_word_validation.txt  saved_game.txt
